Ajout de quelques recommandations

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<li>
 							</li>
 							<li>
-								<a href="page2.html">page2 &gt;</a>
+								<a href="page2.html">Contact &gt;</a>
 							</li>
 						</ul>
 					</div>
@@ -94,7 +94,9 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+						<h2>L'agence La Panthère est une agence de web design qui aident les entreprises à devenir attractives et
+							visibles sur internet.
+						</h2>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -139,7 +141,6 @@
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 						<img alt="agence web, agence web paris, web design paris, stratégie web"
 							src="img/citation.png" />
-
 					</div>
 				</div>
 			</div>
@@ -176,7 +177,7 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+						<h2>Nous travaillons avec beaucoup de clients, voici quelques réalisations.</h2>
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
@@ -210,7 +211,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.bmp" class="img-responsive portfolio-thumb"
+								src="img/img_webp3.webp" class="img-responsive portfolio-thumb"
 								alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -223,7 +224,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4.bmp" class="img-responsive portfolio-thumb"
+								src="img/img_webp4.webp" class="img-responsive portfolio-thumb"
 								alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
