--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,7 @@
 	<script defer src="./js/blocs.min.js"></script>
 	<script defer src="./js/jqBootstrapValidation.js"></script>
 	<script defer src="./js/formHandler.js"></script>
-    <title>page2</title>
+    <title>La Panthère - Contact</title>
 
     
 <!-- Analytics -->
@@ -44,9 +44,6 @@
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html">Accueil</a>
-					</li>
-					<li>
-						<a href="page2.html">page2 &gt;</a>
 					</li>
 				</ul>
 			</div>
