--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords"
-		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
 	<meta name="description"
 		content="La Panthère est une agence de Web design qui aide les entreprises à devenir attractives et visibles sur Internet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -15,12 +13,6 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-
-	<script defer src="./js/jquery-2.1.0.js"></script>
-	<script defer src="./js/bootstrap.js"></script>
-	<script defer src="./js/blocs.js"></script>
-	<script defer src="./js/jquery.touchSwipe.js"></script>
-	<script defer src="./js/gmaps.js"></script>
 
 	<title>La Panthère - Agence de Web Design</title>
 
@@ -43,7 +35,8 @@
 					<div class="navbar-header">
 
 						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
-								alt="paris web design logo agence web meilleure agence" height="40" /></a>
+								alt="dessin du visage d'une panthère à gauche et à droite
+								est écrit La Panthère" height="40" /></a>
 
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
@@ -55,8 +48,6 @@
 						<ul class="site-navigation nav navbar-nav">
 							<li>
 								<a href="index.html">Accueil</a>
-							</li>
-							<li>
 							</li>
 							<li>
 								<a href="page2.html">Contact &gt;</a>
@@ -75,7 +66,7 @@
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img/logo_webp.webp" class="center-block image-resize-mode" width="100"
-							alt="Agence La Panthère, agence web paris, création logo paris" />
+							alt="dessin du visage d'une panthère de face" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							Agence La Panthère
 						</h1>
@@ -193,7 +184,7 @@
 					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 						data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 							src="img/img_webp1.webp"
-							alt="paris web design logo agence web meilleure agence et refonte site web journal"
+							alt="magasines ouverts empilés les uns sur les autres"
 							class="img-responsive portfolio-thumb" /></a>
 					<h3 class="mg-md text-center">
 						Refonte d'un site web pour un journal local
@@ -206,7 +197,7 @@
 					<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 						data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 							src="img/img_webp2.webp" class="img-responsive portfolio-thumb"
-							alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+							alt="femme qui s'apprête à prendre une photo avec son appareil photo professionnel " /></a>
 					<h3 class="mg-md text-center">
 						Création d'un site web pour photographes
 					</h3>
@@ -220,7 +211,7 @@
 					<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
 						data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 							src="img/img_webp3.webp" class="img-responsive portfolio-thumb"
-							alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+							alt="table vue du dessus avec un PC et plusieurs pièces d'un appareil photos" /></a>
 					<h3 class="mg-md text-center">
 						Création d'un site internet pour un voyageur
 					</h3>
@@ -233,7 +224,7 @@
 					<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
 						data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 							src="img/img_webp4.webp" class="img-responsive portfolio-thumb"
-							alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+							alt="bureau vue du dessus avec des mains sur un clavier de PC, et plusieurs choses posées dessus" /></a>
 					<h3 class="mg-md text-center">
 						Conception d'un site pour une agence de mariage
 					</h3>
@@ -273,22 +264,22 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
+								<a class="social" href="#" aria-label="Link to Twitter"><span class="fa fa-twitter icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
+								<a class="social" href="#" aria-label="Link to Facebook" ><span class="fa fa-facebook icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+								<a class="social" href="#" aria-label="Link to Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
+								<a class="social" href="#" aria-label="Link to Instagram"><span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>
 
@@ -298,9 +289,13 @@
 		</div>
 	</div>
 	<!-- Footer - bloc-8 END -->
-
-	</div>
 	<!-- Principal conteneur END -->
+
+	<script defer src="./js/jquery-2.1.0.js"></script>
+	<script defer src="./js/bootstrap.js"></script>
+	<script defer src="./js/blocs.js"></script>
+	<script defer src="./js/jquery.touchSwipe.js"></script>
+	<script defer src="./js/gmaps.js"></script>
 
 
 </body>
