--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
 								alt="dessin du visage d'une panthère à gauche et à droite
-								est écrit La Panthère" height="40" /></a>
+								est écrit La Panthère" height="40"></a>
 
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
@@ -66,7 +66,7 @@
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img/logo_webp.webp" class="center-block image-resize-mode" width="100"
-							alt="dessin du visage d'une panthère de face" />
+							alt="dessin du visage d'une panthère de face">
 						<h1 class="text-center hero-bloc-text tc-white ">
 							Agence La Panthère
 						</h1>
@@ -185,7 +185,7 @@
 						data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 							src="img/img_webp1.webp"
 							alt="magasines ouverts empilés les uns sur les autres"
-							class="img-responsive portfolio-thumb" /></a>
+							class="img-responsive portfolio-thumb"></a>
 					<h3 class="mg-md text-center">
 						Refonte d'un site web pour un journal local
 					</h3>
@@ -197,7 +197,7 @@
 					<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 						data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 							src="img/img_webp2.webp" class="img-responsive portfolio-thumb"
-							alt="femme qui s'apprête à prendre une photo avec son appareil photo professionnel " /></a>
+							alt="femme qui s'apprête à prendre une photo avec son appareil photo professionnel"></a>
 					<h3 class="mg-md text-center">
 						Création d'un site web pour photographes
 					</h3>
@@ -211,7 +211,7 @@
 					<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
 						data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 							src="img/img_webp3.webp" class="img-responsive portfolio-thumb"
-							alt="table vue du dessus avec un PC et plusieurs pièces d'un appareil photos" /></a>
+							alt="table vue du dessus avec un PC et plusieurs pièces d'un appareil photos"></a>
 					<h3 class="mg-md text-center">
 						Création d'un site internet pour un voyageur
 					</h3>
@@ -224,7 +224,7 @@
 					<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
 						data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 							src="img/img_webp4.webp" class="img-responsive portfolio-thumb"
-							alt="bureau vue du dessus avec des mains sur un clavier de PC, et plusieurs choses posées dessus" /></a>
+							alt="bureau vue du dessus avec des mains sur un clavier de PC, et plusieurs choses posées dessus"></a>
 					<h3 class="mg-md text-center">
 						Conception d'un site pour une agence de mariage
 					</h3>
